refactor: 全局 review 后的冗余清理（无业务行为变更）
工具/响应:
- Result: HashMap 反模式 → 不可变 record<T>，字段顺序稳定 + 类型安全；新增 successMsg() 区别于 success(data)
- DbExceptionTranslator: 抽出 execute(Supplier, fallbackMsg) 统一封装 try-catch-translate，消除 7 处样板

Service 清理:
- UserServiceImpl/BillServiceImpl/ProviderServiceImpl: 移除 e.printStackTrace() 反模式；统一使用 DbExceptionTranslator.execute
- 移除显式 @Service("xxx") 别名（与默认 bean 名等价）
- RoleServiceImpl 去 @Transactional（只读单查询无意义）

Controller 清理:
- DTO 内聚 toNewEntity/toUpdateEntity，消除 Controller 中 entity = new Xxx; setXxx() 大段样板
- 失败统一抛 BusinessException 由全局 handler 翻译为 400，去掉 ok ? success : error 三元式
- 所有 Result 返回值补泛型；ApiExceptionHandler 同步补 Result<String>
- AuthApiController 删除过时注释（旧 Thymeleaf 入口）
- AiChatController: 删除 startStreamWithoutPersistUser 死代码 + 未使用的 @Async import；newCachedThreadPool 换成有界 ThreadPoolExecutor 防线程爆炸

AiChatService bug 修复 + 清理:
- 修复 tool_call/tool_result SSE 事件 JSON 双层 escape：用 ObjectMapper 整体序列化 + 把 raw JSON 解析为 JsonNode 嵌入，前端拿到的是对象而非字符串
- 删除 noop() 死方法与未使用 CompletableFuture import